--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
     <!-- Owl Stylesheets -->
@@ -319,7 +322,7 @@
             <ul>
               <li><i class="fa-solid fa-location-dot" id="change_color"></i><p> Madhapur, road no:10 ayyappa colony, 500083</p></li>
               <li><i class="fa-solid fa-phone" id="change_color"></i><p> +91 987654321</p></li>
-              <li><i class="fa-solid fa-envelope" id="change_color"></i><p>ddedge2022@gmail.com</p></li>
+              <li><i class="fa-solid fa-envelope" id="change_color"></i><p>Sample@gmail.com</p></li>
             </ul>
             <div class="social_media">
               <h5>Follow us</h5>
@@ -341,7 +344,7 @@
             All Rights Reserved by Mens Fashion &copy; 2022
           </div>
           <div class="col-lg-6 text-right left_again">
-            <p>Designed and Developed by <span><img src="images/130-80 logo.png" alt="" width="80px" height="50px"></span></p>
+<!--             <p>Designed and Developed by <span><img src="images/130-80 logo.png" alt="" width="80px" height="50px"></span></p> -->
           </div>
         </div>
       </div>
